--- a/RMS/data/dashboard.html
+++ b/RMS/data/dashboard.html
@@ -29,7 +29,13 @@
     <p><a href="/SafeLock">Lock Safe</a></p>
 <p><a href="/SafeUnlock">Unlock Safe</a></p>
 </div>
-<div></div>
+<div>
+     <p>Fan Control</p>
+     <p>%FANCONTROL%</p>
+     <p><a href="/FanManualOn">Turn Fan On</a></p>
+        <p><a href="/FanManualOff">Turn Fan Off</a></p>
+        <p><a href="/FanControl">Fan Automatic/Manual</a></p>
+</div>
     <div>LogEvents<p><a href="/logOutput">Download</a></div>
     <div>
         <p><a href="/LEDOn">Turn LED On</a></p>
